--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,11 +17,9 @@
 }
 
 :root {
-	font-size: 1rem;
 	--primary-900: #2b63d9;
 	--primary-600: #437ef7;
 	--primary-200: #b1ccfb;
-
 	--secondary-950: #151b28;
 	--secondary-800: #a5acba;
 	--secondary-700: #272d37;
@@ -29,8 +27,12 @@
 	--secondary-300: #2e3545;
 	--secondary-50: #5f6d7e;
 	--secondary-25: #919ba7;
-
 	--nature-200: #f9f9f9;
+	--nature-100: #f8f9fb;
+}
+
+.none {
+	display: none;
 }
 
 body {
@@ -128,6 +130,7 @@ a {
 
 .navbar__items {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 .navbar__item a {
@@ -164,6 +167,7 @@ a {
 .hero {
 	padding-top: 80px;
 	padding-bottom: 92px;
+	background-color: var(--nature-100);
 }
 
 .hero__content {
@@ -245,6 +249,7 @@ a {
 
 .blog .d-flex {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: start;
 }
 
@@ -282,8 +287,8 @@ a {
 
 .blog__right {
 	max-width: 50%;
-	flex: 1 1 50%;
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 	padding-left: 16px;
 	gap: 2rem;
@@ -361,14 +366,17 @@ a {
 	object-fit: cover;
 	border-radius: 10px;
 }
+
 .latest-blog__card h6 {
 	color: var(--secondary-50);
 	margin-bottom: 0.5rem;
 }
+
 .latest-blog__card h4 {
 	color: var(--secondary-700);
 	margin-bottom: 1rem;
 }
+
 .latest-blog__card a {
 	color: var(--primary-600);
 	text-align: left;
@@ -416,6 +424,21 @@ a {
 
 .footer .d-flex {
 	align-items: start;
+}
+
+.footer__wrapper {
+	max-width: 80%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.footer__wrapper .footer__col:not(:last-child) {
+	padding: 0 6rem;
+}
+
+.footer__col.last {
+	padding-left: 6rem;
 }
 
 .footer__brand {
@@ -477,4 +500,322 @@ a {
 .foooter__item a {
 	font-weight: 500;
 	color: var(--secondary-800);
+}
+
+/* media queries */
+@media (max-width: 768px) {
+	.container {
+		max-width: 91.6%;
+		padding: 0;
+		margin: 0 auto;
+	}
+
+	main {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.none {
+		display: inline-block;
+	}
+
+	.navbar {
+		padding: 16px 0;
+	}
+
+	.navbar .container {
+		max-width: 100%;
+		padding: 0 20px;
+	}
+
+	.navbar__logo {
+		max-width: 128px;
+		height: 32px;
+		padding: 0;
+	}
+
+	.navbar__logo img {
+		max-width: 128px;
+		height: 32px;
+		object-fit: contain;
+	}
+
+	.navbar__links {
+		display: none;
+	}
+
+	.navbar__btns {
+		display: none;
+	}
+
+	.navbar__menu img {
+		vertical-align: middle;
+	}
+
+	.hero {
+		padding-top: 48px;
+		padding-bottom: 88px;
+	}
+
+	.hero h6 {
+		margin-bottom: 0;
+	}
+
+	.hero__content {
+		max-width: 672px;
+		margin: 0 auto;
+		text-align: center;
+		padding: 0 1rem;
+	}
+
+	.blog {
+		order: 0;
+		padding: 48px 0;
+	}
+
+	.blog .d-flex {
+		flex-direction: column;
+	}
+
+	.blog__left {
+		max-width: 100%;
+		padding: 0;
+		padding-bottom: 32px;
+	}
+
+	.blog__left figure {
+		margin-bottom: 24px;
+		height: 299px;
+		margin: 0;
+	}
+
+	.blog__right {
+		max-width: 100%;
+		padding: 0;
+	}
+
+	.action {
+		order: 1;
+		padding: 40px 0;
+	}
+
+	.action .d-flex {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.action__content,
+	.action__call {
+		max-width: 100%;
+	}
+	.action__content h3 {
+		margin-bottom: 16px;
+	}
+	.action__content p {
+		margin-bottom: 32px;
+	}
+
+	.latest-blog {
+		padding: 44px 0;
+		order: 2;
+	}
+
+	.hide {
+		display: none;
+	}
+
+	.latest-blog__card {
+		width: 48%;
+	}
+
+	.cta {
+		order: 8;
+		padding: 40px 0;
+	}
+	.cta__content {
+		max-width: 100%;
+		margin: 0 auto;
+	}
+
+	.cta__btn.login {
+		color: #fff;
+		background: var(--primary-600);
+		box-shadow: 0px 1px 2px 0px #1018280a;
+	}
+
+	.footer .d-flex {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.footer__brand {
+		max-width: 100%;
+		padding-bottom: 28px;
+	}
+
+	.footer__form input {
+		width: 100%;
+	}
+
+	.footer__wrapper .footer__col:not(:last-child) {
+		padding: 0;
+	}
+
+	.footer__col.last {
+		padding: 0;
+	}
+
+	.footer__wrapper {
+		max-width: 100%;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		gap: 11rem;
+		padding-top: 40px;
+	}
+}
+
+@media (max-width: 375px) {
+	.hide {
+		display: block;
+	}
+
+	h3 {
+		font-weight: 600;
+		font-size: 28px;
+		line-height: 36px;
+		letter-spacing: -2%;
+	}
+
+	h4 {
+		font-weight: 600;
+		font-size: 20px;
+		line-height: 28px;
+		letter-spacing: -2%;
+		margin-bottom: 4px;
+	}
+
+	.navbar .container {
+		max-width: 100%;
+		padding: 0 16px;
+	}
+
+	.hero {
+		padding-top: 32px;
+		padding-bottom: 40px;
+	}
+
+	.hero h6 {
+		margin-bottom: 32px;
+	}
+
+	.hero h1 {
+		font-weight: 600;
+		font-size: 36px;
+		line-height: 44px;
+		letter-spacing: -2%;
+	}
+
+	.blog {
+		padding: 32px 0;
+	}
+
+	.blog figure {
+		width: 100%;
+		height: 185px;
+	}
+	.blog img {
+		width: 100%;
+		height: 185px;
+	}
+
+	.blog__right-blog,
+	.blog__left {
+		flex-direction: column;
+		padding: 0;
+	}
+
+	.blog__left {
+		margin-bottom: 32px;
+	}
+
+	.action {
+		padding: 32px 0;
+	}
+
+	.action__content p {
+		padding-right: 0;
+		margin-bottom: 24px;
+	}
+	.action__call form {
+		display: flex;
+		flex-direction: column;
+	}
+	.action__call input {
+		width: 100%;
+		border-radius: 6px;
+	}
+	.action__call-btn {
+		margin-top: 16px;
+		border-radius: 6px;
+		width: 100%;
+	}
+
+	.action__call h6 {
+		display: none;
+	}
+
+	.latest-blog {
+		padding: 32px 0;
+	}
+
+	.latest-blog .d-flex {
+		flex-direction: column;
+		padding: 32px 0;
+	}
+
+	.latest-blog__title {
+		font-weight: 700;
+		font-size: 24px;
+		line-height: 32px;
+		letter-spacing: -2%;
+	}
+
+	.latest-blog__card {
+		width: 100%;
+		margin-bottom: 32px;
+	}
+
+	.cta {
+		padding: 32px 0;
+	}
+
+	.cta__content {
+		display: flex;
+		flex-direction: column;
+		align-items: stretch;
+	}
+	.cta__btn,
+	.cta__btn.login {
+		width: 100%;
+		margin: 0;
+	}
+	.cta__btn + .none {
+		margin-top: 16px;
+	}
+
+	.footer__wrapper {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 4rem;
+	}
+	.footer__col.last {
+		width: 100%;
+		max-width: 100%;
+		order: 2;
+		padding-bottom: 32px;
+	}
+	.footer__col-title {
+		margin-bottom: 12px;
+	}
 }
